--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -427,8 +427,7 @@ html#home-html {
       font-size: 22px;
       margin-bottom: 30px;
     }
-    #download-button {
-      background-color: @nats-colour-green-lite;
+    .btn {
       font-size: 28px;
       color: white;
       -webkit-box-shadow: 0px 0px 0px 0px rgba(255,255,255,0.65);
@@ -443,6 +442,18 @@ html#home-html {
         -moz-box-shadow: 0px 0px 15px 6px rgba(255,255,255,0.65);
         box-shadow: 0px 0px 15px 6px rgba(255,255,255,0.65);
       };
+
+      &.green {
+        background-color: @nats-colour-green-lite;
+      }
+
+      &.blue-lite {
+        background-color: @nats-colour-blue-lite;
+      }
+
+      &.purple {
+
+      }
     }
     .bottom-logo-container {
       text-align: center;
