Fix CSS watch capability
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -430,6 +430,7 @@ html#home-html {
     .btn {
       font-size: 28px;
       color: white;
+      background-color: @nats-brand-gray-light;
       -webkit-box-shadow: 0px 0px 0px 0px rgba(255,255,255,0.65);
       -moz-box-shadow: 0px 0px 0px 0px rgba(255,255,255,0.65);
       box-shadow: 0px 0px 0px 0px rgba(255,255,255,0.65);
@@ -449,10 +450,6 @@ html#home-html {
 
       &.blue-lite {
         background-color: @nats-colour-blue-lite;
-      }
-
-      &.purple {
-
       }
     }
     .bottom-logo-container {
