--- a/layouts/partials/addons.html
+++ b/layouts/partials/addons.html
@@ -16,7 +16,7 @@
             <tr>
                 <td><a href="{{ .home }}" target="_blank">{{ .name }}</a></td>
                 <td>{{ .description }}</td>
-                <td>{{ if .authorHome }}<a href="{{ .authorHome }}" target="_blank">{{ end }}{{ .author }}{{ if .authorHome }}</a>{{ end }}</td>
+                <td>{{ range $i, $e := .authors }}{{ if $i }}, {{ end }}{{ if $e.authorHome }}<a href="{{ $e.authorHome }}" target="_blank">{{ end }}{{ $e.author }}{{ if $e.authorHome }}</a>{{ end }}{{ end }}</td>
                 <td>{{ .support }}</td>
             </tr>
         {{ end }}
