--- a/layouts/documentation/single.html
+++ b/layouts/documentation/single.html
@@ -5,13 +5,7 @@
       {{ partial "doc/side-menu.html" . }}
     </div>
     <div id="doc-content" class="col-md-9">
-      {{ if eq .File.Path "index.md" }}
-      <a class="pull-right" target="_blank" href="{{ .Site.Params.githubBaseUrl }}/_{{ .File.Path }}"><i class="icon icon-github"></i> Edit on GitHub</a>
-      {{ else }}
-      <a class="pull-right" target="_blank" href="{{ .Site.Params.githubBaseUrl }}/{{ .File.Path }}"><i class="icon icon-github"></i> Edit on GitHub</a>
-      {{ end }}
-
-      <h1>{{ .Title }}</h1>
+      {{ partial "doc/title.html" . }}
       <article>
       {{ .Content }}
       </article>
