--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -31,6 +31,12 @@
 @nats-brand-github-dark:                    #000;
 @nats-brand-reddit-dark:                    #000;
 
+// Button overrides
+.btn {
+  border: none;
+  border-radius: 0;
+}
+
 // Variable Overrides
 @brand-info:                                @nats-colour-blue-lite;
 @text-color:                                @nats-brand-gray-dark;
@@ -176,19 +182,21 @@ a[name]:before {
 }
 
 // Headers
+h1, h2, h3 {
+  margin-bottom: 1.5rem;
+}
+
 h1 {
   font-weight: 600;
 }
 h2 {
-  font-weight: 600;
+  font-weight: 500;
 }
 h3 {
   font-weight: 400;
-  color: @nats-colour-blue-dark;
 }
 h4 {
   font-weight: 400;
-  color: @nats-colour-blue-dark;
 }
 h5 {
   font-weight: 700;
