--- a/layouts/partials/doc/title.html
+++ b/layouts/partials/doc/title.html
@@ -2,7 +2,7 @@
 {{ $title   := cond (isset .Params "alttitle") .Params.alttitle .Title }}
 <h1>{{ $title }}</h1>
 
-<a role="button" class="btn btn-primary btn-sm" target="_blank" href="{{ $editUrl }}">
+<a role="button" class="btn btn-sm edit-btn" target="_blank" href="{{ $editUrl }}">
     <i class="icon icon-github"></i> Edit on GitHub
 </a>
     
