--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -170,10 +170,19 @@ body {
 
 // Doc title section
 .doc-title {
-  h1.title {
-    font-weight: 300;
-    font-size: 5rem;
+  .doc-title-section {
     margin-bottom: 2rem;
+
+    h1.title {
+      font-weight: 300;
+      font-size: 5rem;
+      margin-bottom: .5rem;
+    }
+
+    h2.description {
+      margin-top: 1rem;
+      font-weight: 300;
+    }
   }
 
   .edit-btn {
