Update blockquote colors
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -899,6 +899,19 @@ code[data-viz] {
         padding-left: 1.75rem;
       }
     }
+
+    blockquote {
+      border: none;
+      background-color: lighten(@nats-colour-blue-lite, 5%);
+
+      p {
+        color: #fff;
+
+        a {
+          color: @nats-brand-blue-dark;
+        }
+      }
+    }
   }
 
   #main-con {
