Use blue hr under doc title
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -200,7 +200,7 @@ body {
 
 // Dark HR
 hr.dark-hr {
-  background-color: @nats-brand-gray;
+  background-color: @nats-colour-blue-lite;
   height: 1px;
 }
 
