Rework header styles
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -224,10 +224,10 @@ h1 {
 h2 {
   font-weight: 500;
 }
-h3 {
-  font-weight: 400;
+h3, h4, h5, h6 {
+  color: @nats-colour-blue-dark;
 }
-h4 {
+h3, h4 {
   font-weight: 400;
 }
 h5 {
