Adjust blockquote style
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -903,6 +903,8 @@ code[data-viz] {
     blockquote {
       border: none;
       background-color: lighten(@nats-colour-blue-lite, 5%);
+      padding-left: 15px;
+      font-size: 18px;
 
       p {
         color: #fff;
