--- a/layouts/partials/partners.html
+++ b/layouts/partials/partners.html
@@ -1,6 +1,6 @@
 <h2>Partners</h2>
 <p class="lead">We work with a variety of companies to ensure NATS is delivered in a broad range of solutions used by
-    our community</p>
+    our community. <a href="mailto:info@nats.io?subject=Partner Inquiry">Contact us to Partner.</a></p>
 
 <div class="row partners-logos">
     {{ range $.Site.Data }}
@@ -11,6 +11,3 @@
     {{ end }}
     {{ end }}
 </div>
-
-
-<p class="text-center"><a href="mailto:info@nats.io">Contact us to Partner.</a></p>
