--- a/layouts/partials/ways-to-contribute.html
+++ b/layouts/partials/ways-to-contribute.html
@@ -1,5 +1,5 @@
 <h2>Ways to Contribute</h2>
-<p>The best way to get started contributing to NATS is to read our <a href="/documentation/contributing/">Contributor's Guide</a>. Here are some examples of how you can contribute:</p>
+<p>The best way to get started contributing to NATS is to read our <a href="/contributing/">Contributor's Guide</a>. Here are some examples of how you can contribute:</p>
 <ul class="list-bullet-indent">
     <li>Report or Fix Bugs</li>
     <li>Add or Propose New Features</li>
