--- a/layouts/documentation/single.html
+++ b/layouts/documentation/single.html
@@ -1,19 +1,12 @@
 {{ partial "header.html" . }}
 <div id="main-con" class="container">
   <div class="row">
-    <div id="left-nav-con" class="col-md-3">
-      {{ partial "doc/side-menu.html" . }}
-    </div>
-    <div id="doc-content" class="col-md-9">
-      {{ if eq .File.Path "index.md" }}
-      <a class="pull-right" target="_blank" href="{{ .Site.Params.githubBaseUrl }}/_{{ .File.Path }}"><i class="icon icon-github"></i> Edit on GitHub</a>
-      {{ else }}
-      <a class="pull-right" target="_blank" href="{{ .Site.Params.githubBaseUrl }}/{{ .File.Path }}"><i class="icon icon-github"></i> Edit on GitHub</a>
-      {{ end }}
 
-      <h1>{{ .Title }}</h1>
+    <div id="doc-content" class="col-md-9">
+
+      <h1>Our documentation has moved!</h1>
       <article>
-      {{ .Content }}
+      We have updated and relocated our documentation to <a href="https://nats-io.github.io/docs/" target="_blank">https://nats-io.github.io/docs/</a>
       </article>
     </div>
   </div>
