--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,7 +14,7 @@
 
                             <p class="bottom-info">NATS.io is a simple, secure and high performance open source messaging system for cloud native applications, IoT messaging, and microservices architectures.</p>
 
-                            <p class="bottom-info">We are a <a href="https://cncf.io/projects" target="_blank">Cloud Native Computing Foundation</a> incubating project. Members of the Synadia team created and maintain the NATS and Streaming Servers, as well as clients
+                            <p class="bottom-info">We are a <a href="https://cncf.io/projects" target="_blank">Cloud Native Computing Foundation</a> project. Members of the Synadia team created and maintain the NATS and Streaming Servers, as well as clients
                             written in Go, Java, Javascript/Typescript, Python, Ruby, C#, C, and NGINX. The community has also contributed a growing list of client libraries, including Arduino, Rust, Lua, PHP, Perl, and <a href="/download">more</a>.</p>
                             <p class="bottom-info">Companies like OpenTable, MasterCard, Ericsson, HTC, Siemens, VMware, Pivotal, GE, Alibaba and Baidu, among others, rely on the NATS.io messaging system for its highly performant, secure  and resilient capabilities.</p>
                             {{ partial "logos/logo-container.html" . }}
