--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,7 +13,7 @@
                               class="icon icon-slack"></i></a>
                       <a target="_blank" href="https://www.reddit.com/r/NATS_io/"><i class="icon icon-reddit"></i></a>
                   </p>
-                  <p>NATS is <a href="https://github.com/nats-io/gnatsd" target="_blank">open-source
+                  <p>NATS is <a href="https://github.com/nats-io" target="_blank">open-source
                       software</a>, as is <a href="https://github.com/nats-io/nats-site" target="_blank">this site</a>. <a id="priv" class="dynamic" target="_blank">Privacy</a>.
                   </p>
               </div>
