--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,7 +9,7 @@
                               class="icon icon-google-plus"></i></a>
                       <a target="_blank" href="https://github.com/nats-io"><i class="icon icon-github"></i></a>
                       <a target="_blank"
-                         href="https://join.slack.com/t/natsio/shared_invite/enQtMzE2NDkxNDI2NTE1LTc5ZDEzYTkwYWZkYWQ5YjY1MzBjMWZmYzA5OGQxMzlkMGQzMjYxNGM3MWYxMjNiYmNjNzIwMTVjMWE2ZDgxZGM"><i
+                         href="https://slack.nats.io"><i
                               class="icon icon-slack"></i></a>
                       <a target="_blank" href="https://www.reddit.com/r/NATS_io/"><i class="icon icon-reddit"></i></a>
                   </p>
