update slack invite url to slack.nats.io

--- a/layouts/partials/stay-in-touch.html
+++ b/layouts/partials/stay-in-touch.html
@@ -1,5 +1,5 @@
 <h2>Office Hours</h2>
-<p> NATS Office Hours will be on hiatus for the US summer season. Please join our <a href="https://join.slack.com/t/natsio/shared_invite/enQtMzE2NDkxNDI2NTE1LTc5ZDEzYTkwYWZkYWQ5YjY1MzBjMWZmYzA5OGQxMzlkMGQzMjYxNGM3MWYxMjNiYmNjNzIwMTVjMWE2ZDgxZGM" target="_blank">Slack</a> channel or <a href="https://groups.google.com/forum/#!forum/natsio" target="_blank">Google Group</a> to chat with our maintainers.</p>
+<p> NATS Office Hours will be on hiatus for the US summer season. Please join our <a href="https://slack.nats.io" target="_blank">Slack</a> channel or <a href="https://groups.google.com/forum/#!forum/natsio" target="_blank">Google Group</a> to chat with our maintainers.</p>
 <h2>NATS Newsletter</h2>
 <p>Stay up to date with the latest information on NATS.</p>
 <a class="btn btn-primary" target="_blank" href="https://goo.gl/forms/TFoKVm7yzU4ucM9i2">Sign Up!</a>
