update http to https to resolve mixed-content alert from Netlify

--- a/layouts/partials/logos/cncf.html
+++ b/layouts/partials/logos/cncf.html
@@ -3,7 +3,7 @@
 </div>
 <div class="row bottom-logo-container">
     <div class="offset-xs-3 col-xs-6 offset-md-4 col-md-4 cncf">
-        <a target="_blank" href="http://www.cncf.io/">
+        <a target="_blank" href="https://www.cncf.io/">
             {{ readFile "static/img/cncf-white.svg" | safeHTML }}
         </a>
     </div>
