--- a/layouts/partials/logos/pivotal.html
+++ b/layouts/partials/logos/pivotal.html
@@ -1,5 +1,5 @@
 <div class="col-xs-3 col-xs-offset-1 pivotal">
-    <a target="_blank" href="http://pivotal.io/">
+    <a target="_blank" href="https://pivotal.io/">
         <img src="/img/pivotal.png" alt="pivotal" class="pivotal"/>
     </a>
 </div>
