--- a/layouts/partials/logos/vmware.html
+++ b/layouts/partials/logos/vmware.html
@@ -1,5 +1,5 @@
 <div class="col-xs-3 vmware">
-    <a target="_blank" href="http://www.vmware.com/">
+    <a target="_blank" href="https://www.vmware.com/">
         <img src="/img/vmware.png" alt="vmware" class="vmware"/>
     </a>
 </div>
