--- a/layouts/partials/logos/baidu.html
+++ b/layouts/partials/logos/baidu.html
@@ -1,5 +1,5 @@
 <div class="col-xs-3 baidu">
-    <a target="_blank" href="http://www.baidu.com/">
+    <a target="_blank" href="https://www.baidu.com/">
         <img src="/img/baidu.png" alt="baidu" class="baidu"/>
     </a>
 </div>
