--- a/layouts/partials/logos/ericsson.html
+++ b/layouts/partials/logos/ericsson.html
@@ -1,5 +1,5 @@
 <div class="col-xs-3 ericsson">
-    <a target="_blank" href="http://www.ericsson.com/">
+    <a target="_blank" href="https://www.ericsson.com/">
         <img src="/img/ericsson.png" alt="ericsson" class="ericsson"/>
     </a>
 </div>
