--- a/layouts/partials/logos/htc.html
+++ b/layouts/partials/logos/htc.html
@@ -1,5 +1,5 @@
 <div class="col-xs-3 htc">
-    <a target="_blank" href="http://www.htc.com/us/">
+    <a target="_blank" href="https://www.htc.com/us/">
         <img src="/img/htc.png" alt="htc" class="htc"/>
     </a>
 </div>
