--- a/layouts/partials/logos/siemens.html
+++ b/layouts/partials/logos/siemens.html
@@ -1,5 +1,5 @@
 <div class="col-xs-3 siemens">
-    <a target="_blank" href="http://www.siemens.com/entry/cc/en/">
+    <a target="_blank" href="https://www.siemens.com/entry/cc/en/">
         <img src="/img/siemens.png" alt="siemens" class="siemens"/>
     </a>
 </div>
