add branding info to Community  page

--- a/layouts/partials/ways-to-contribute.html
+++ b/layouts/partials/ways-to-contribute.html
@@ -10,3 +10,10 @@
 </ul>
 
 <p>Please <a href="mailto:info@nats.io?subject=NATS suggestions">contact us</a> with any other suggestions.</p>
+
+<h2 id="branding">Branding</h2>
+<p>NATS is an open source project hosted by the CNCF. All colors, logos, and styles should be used as governed by the Linux Foundation/CNCF.</p>
+<ul class="list-bullet-indent">
+    <li><a href="https://branding.cncf.io/projects/nats/" target="_blank">NATS Logo Colors and Images</a></li>
+    <li><a href="https://branding.cncf.io/style-guide/" target="_blank">CNCF Style Guide</a></li>
+</ul>
