--- a/layouts/partials/stay-in-touch.html
+++ b/layouts/partials/stay-in-touch.html
@@ -1,8 +1,13 @@
-<h2>Office Hours</h2>
-<p> NATS Office Hours will be on hiatus for the US summer season. Please join our <a href="https://slack.nats.io" target="_blank">Slack</a> channel or <a href="https://groups.google.com/forum/#!forum/natsio" target="_blank">Google Group</a> to chat with our maintainers.</p>
 <h2>NATS Newsletter</h2>
 <p>Stay up to date with the latest information on NATS.</p>
 <a class="btn btn-primary" target="_blank" href="https://goo.gl/forms/TFoKVm7yzU4ucM9i2">Sign Up!</a>
+
+<h2 id="branding">Branding</h2>
+<p>NATS is an open source project hosted by the CNCF. All colors, logos, and styles should be used as governed by the Linux Foundation/CNCF.</p>
+<ul class="list-bullet-indent">
+    <li><a href="https://branding.cncf.io/projects/nats/" target="_blank">NATS Logo Colors and Images</a></li>
+    <li><a href="https://branding.cncf.io/style-guide/" target="_blank">CNCF Style Guide</a></li>
+</ul>
 <div id="social-con">
     <h2>Social</h2>
     <ul class="social-list list-inline">
@@ -13,3 +18,5 @@
         <li><a target="_blank" href="https://www.reddit.com/r/nats_io"><img alt="reddit" src="/img/social/reddit.png"/></a></li>
     </ul>
 </div>
+
+
