--- a/layouts/download/single.html
+++ b/layouts/download/single.html
@@ -1,4 +1,4 @@
-{{ $.Scratch.Set "pageRelUrl" .RelPermalink }}
+{{ $here := .RelPermalink }}
 {{ partial "header.html" . }}
 <div id="main-con" class="container">
   <div class="row">
@@ -6,14 +6,15 @@
       {{ .Content }}
       {{ range $.Site.Data }}
       {{ range .Releases }}
+      {{ $ghInfo := index .github 0 }}
+      {{ $user   := $ghInfo.user }}
+      {{ $repo   := $ghInfo.repo | lower }}
+      {{ $isHere := eq $here (printf "/download/%s/%s/" $user $repo) }}
+      {{ $name   := cond (not (in .name "Server")) .name (printf "%s Client" .name) }}
 
-        {{ range first 1 .github }}
-          {{ $.Scratch.Set "githubUser" .user }}
-          {{ $.Scratch.Set "githubRepo" .repo }}
-        {{ end }}
-        {{ if eq ($.Scratch.Get "pageRelUrl") ( print "/download/" ($.Scratch.Get "githubUser") "/" (lower ($.Scratch.Get "githubRepo")) "/" ) }}
+        {{ if $isHere }}
           <div class="page-header">
-            <h1>{{ .name }}{{ if not (in .name "Server") }} Client{{ end }}</h1>
+            <h1>{{ $name }}</h1>
           </div>
           <div id="download-detail-con" class="row">
             <div class="col-lg-3 col-sm-4 detail-block left">
@@ -37,20 +38,22 @@
             </div>
             <div class="col-lg-9 col-sm-8 detail-block">
               <div class="github-buttons">
-              {{ range first 1 .github }}
+              {{ $link := $ghInfo.link }}
+
+
               <!-- Watch -->
-              <a class="github-button" href="{{ .link }}/subscription" data-icon="octicon-eye" data-size="large" data-show-count="true" aria-label="# watchers on GitHub">Watch</a>
+              <a class="github-button" href="{{ $link }}/subscription" data-icon="octicon-eye" data-size="large" data-show-count="true" aria-label="# watchers on GitHub">Watch</a>
               <!-- Star -->
-              <a class="github-button" href="{{ .link }}" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="# stargazers on GitHub">Star</a>
+              <a class="github-button" href="{{ $link }}" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="# stargazers on GitHub">Star</a>
               <!-- Fork -->
-              <a class="github-button" href="{{ .link }}/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="# forks on GitHub">Fork</a>
-              {{ end }}
+              <a class="github-button" href="{{ $link }}/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="# forks on GitHub">Fork</a>
+
             </div>
               <ul class="list-unstyled">
-                {{ range first 1 .github }}
-                <li><a href="{{ .link }}" target="_blank">View on Github</a></li>
-                <li><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></li>
-                {{ end }}
+     
+                <li><a href="{{ $link }}" target="_blank">View on Github</a></li>
+                <li><a href="{{ $link }}/releases/latest" target="_blank">Download Latest</a></li>
+        
                 {{ range .links }}
                 <li><a href="{{ .url }}">{{ .name }}</a></li>
                 {{ end }}
