--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,7 +1,7 @@
 {{ $title := site.Title }}
 {{ $home  := site.BaseURL }}
 {{ $menu  := site.Menus.main }}
-<nav class="navbar is-dark is-fixed-top">
+<nav class="navbar is-dark is-fixed-top is-transparent">
   <div class="container">
     <div class="navbar-brand">
       <a class="navbar-item" href="{{ $home }}">
