Add initial single page template
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,7 +5,7 @@
   <head>
     <title>
       {{ block "title" . }}
-      {{ site.Title }}
+      {{ site.Title }} &ndash; {{ site.Params.tagline }}
       {{ end }}
     </title>
     {{ partial "css.html" . }}
