Add initial downloads template
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -48,8 +48,9 @@ $family-monospace: "{{ . }}", monospace
 {{ end }}
 
 // Bulma-specific overrides
-$dark: $nats-dark
 $primary: $nats-blue
+$link: $primary
+$dark: $nats-dark
 $navbar-height: 4rem
 
 // Final Bulma imports
