Remove unused documentation and add docs splat redirect
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,7 +1,7 @@
 <section class="hero is-dark">
   <div class="hero-body">
     <div class="container">
-      <p class="title is-size-1 is-size-2-mobile has-text-weight-light">
+      <p class="title is-size-1 is-size-2-mobile has-text-weight-medium">
         {{ .Title }}
       </p>
     </div>
