--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -1,6 +1,6 @@
 <section class="section">
   <div class="container">
-    <div class="content">
+    <div class="content is-medium">
       {{ .Content }}
     </div>
   </div>
