Add initial users section to main page
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -127,3 +127,13 @@ $colors: mergeColorMaps(("light-green": ($nats-light-green, $white)), $colors)
 .is-cncf-logo
   margin-top: 2rem
   +logo(40%, 70%, 70%)
+
+.logos
+  display: flex
+  flex-direction: row
+  flex-wrap: wrap
+
+  .logo
+    max-height: 3rem
+    flex: 25%
+    margin-bottom: 1rem
