--- a/layouts/partials/home/info.html
+++ b/layouts/partials/home/info.html
@@ -1,16 +1,41 @@
-{{ $desc := site.Params.description_long | markdownify }}
+{{ $desc      := site.Params.description_long | markdownify }}
+{{ $companies := site.Data.companies.companies }}
 
 <section class="section">
   <div class="container">
     <div class="columns is-variable is-8">
-      <div class="column">
+      <div class="column is-one-third">
         <div class="content is-medium">
           {{ $desc }}
         </div>
       </div>
 
       <div class="column">
-        
+        <div class="container">
+          <div class="columns is-multiline">
+            {{ range $k, $v := $companies }}
+            {{ $img := printf "img/logos/companies/%s" $v.logo | relURL }}
+            <div class="column is-one-third">
+              <a href="{{ $v.home }}" target="_blank">
+                <img src="{{ $img }}" alt="{{ $v.name }} logo">
+              </a>
+            </div>
+            {{ end }}
+          </div>
+        </div>
+
+        <!--
+        <div class="logos">
+          {{ range $k, $v := $companies }}
+          {{ $img := printf "img/logos/companies/%s" $v.logo | relURL }}
+          <div class="logo">
+            <a href="{{ $v.home }}" target="_blank">
+              <img src="{{ $img }}" alt="{{ $v.name }} logo">
+            </a>
+          </div>
+          {{ end }}
+        </div>
+        -->
       </div>
     </div>
   </div>
